new subdomain form
if domain has no subdomains display form to add one.

--- a/dDNS-ng/www/static/custom-style.css
+++ b/dDNS-ng/www/static/custom-style.css
@@ -12,12 +12,12 @@
    z-index: -1;
    align: left;
 }
-#addDomainForm {
+.addDomainForm {
   margin-left: -16px;
 }
-#addDomSubmit {
+.domFields {
   margin-left: -25px;
 }
-#addDomTXT > i {
+.addDomTXT > i {
   right: 10px;
 }
