--- a/dDNS-ng/www/static/custom-style.css
+++ b/dDNS-ng/www/static/custom-style.css
@@ -33,3 +33,14 @@
 .margin-top-7 {
   margin-top: 7px;
 }
+.jumbotron {
+    position: relative;
+    background: #000 url("servers.jpg") center center;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    overflow: hidden;
+}
+.jumbotron > .container > h1, .jumbotron > .container > p {
+  color: white;
+}
